# Live-CSS-Editor

./: .gitignore  LICENSE  Live CSS Editor.command  README.md  crissys-notes.md  god_funcs.py  gram-model  index.php  launch-browser.ps1  launcher.json  launcher.sh  launcher.sh.bak  make_readme.py  model-map.json  package.json  push-win.ps1  push.sh  py_audit.py  search.py  setup.php  smoke-tools.json  style-context.txt  style-tool.config.json  style.css  xcm-moon-ascii.txt
agent-flow/: README.md  index.php
ai/: anthropic.php  config.json  deepseek.php  openai.php  theme-randomizer.json
c_tools/: emoji_replacer.c  folder_scanner.c  folder_scanner.h  linter.h  logger.c  logger.h  outliner.py  pdf_convert.py  sqlite_db.h
css/: agent.css  ai-chat.css  base.css  color-tools.css  fuzzy.css  header.css  info-bar.css  layout.css  modal.css  native-bridge.css  responsive.css  scrollbar.css  wireframe.css
data/: css-properties.php  default-content.php  property-values.php
db-browser/: Makefile  build-with-validation.sh  setup.sh
db_bridge/: README.md  api.php  connection.php  db-client.js  query_guard.php  setup.sh  smoke_test.php
dev-browser/: ENGINE-TESTBED.md  cf_bridge_runner.py  dev-browser.spec  elite-specs.txt  errors.txt  requirements.txt  run.sh  stripe_diag.py  tools.json  video_proxy.php  webbrowse.py  webbrowse_no_controls.py
dev-browser/render_core/: CMakeLists.txt
dev-browser/render_core/src/: arena.h  css_parser.cpp  dom.h  exports.cpp  font_metrics.h  html_tokenizer.cpp  html_tokenizer.h  layout.cpp  layout.h  paint.cpp  paint.h  style_resolver.cpp
dev-tools/: README.md
dev-tools/dev-browser/render_core/: BUILD_BACKENDS.md  CMakeLists.txt  build.sh  simple.html
dev-tools/dev-browser/render_core/build-livecss/: CMakeCache.txt  Makefile  cmake_install.cmake  xcm_glfw_preview  xcm_http_fetch  xcm_input_dump  xcm_sdl_preview  xcm_tui
dev-tools/dev-browser/render_core/src/: arena.h  css_parser.h  exports.cpp  html_tokenizer.cpp  paint.cpp  style_resolver.cpp  style_resolver.h  xcm_glfw_preview.cpp  xcm_gpu_config.cpp  xcm_gpu_config.h  xcm_http_fetch.cpp  xcm_http_fetch.h  xcm_http_fetch_cli.cpp  xcm_input_capture.cpp  xcm_input_capture.h  xcm_input_dump_cli.cpp  xcm_rgba_raster.cpp  xcm_rgba_raster.h  xcm_sdl_preview.cpp  xcm_tui.cpp  xcm_tui.h  xcm_tui_shell.cpp  xcm_tuiapp.cpp  xcm_walnut_software_raster.cpp  xcm_walnut_software_raster.h
imgui-browser/: CMakeLists.txt  README.md  build-and-drop-wsl.ps1  build-linux.sh  build.sh  fetch_deps.sh  run.sh  scan_deps.sh  sec-checklist.txt  settings.json  the-pyGhost-SMaRT.txt  the-pyGhost.txt  xcm.bat  xcm.py
imgui-browser/debug/: .gitignore  app.log.1
imgui-browser/debug/legacy/: cf_client.cpp  turnstile_validator.h  virt-chrome-bridge.js  virt-pages.json  virt_overlay.cpp  virt_overlay.h
imgui-browser/php-wasm-project/: .gitignore  Makefile  README.md  build.sh  php-wasm-project  server.js  watch-log.js
imgui-browser/php-wasm-project/app/: index.php
imgui-browser/php-wasm-project/app/db/: db.php  schema.sql
imgui-browser/php-wasm-project/docker/: Dockerfile  docker-compose.yml
imgui-browser/php-wasm-project/patches/: README.md
imgui-browser/php-wasm-project/public/: index.html  php-wasm.js  style.css  ui.js
imgui-browser/php-wasm-project/scripts/: apply-patches.sh  configure-php.sh  fetch-php.sh  link-wasm.sh
imgui-browser/php-wasm-project/test/: run-tests.js
imgui-browser/php-wasm-project/wasm/: .gitkeep
imgui-browser/src/: Info.plist  app_state.h  apps  browser_settings.h  cf_client.cpp  cf_client.h  chrome.cpp  chrome.css  chrome.h  chrome.html  chrome.js  cmd_server.cpp  cmd_server.h  dev-src  fps_counter.cpp  main.mm  native_chrome.h  native_chrome.mm  persistence.h  server_manager.cpp  server_manager.h  toolbar.html  virt_overlay.cpp  virt_overlay.h  webview.h  webview.mm  xcm_shell.h  xcm_shell.mm  xcm_shell_stub.cpp
imgui-browser/src/cmds-and-server/: cmd_server.cpp  server_manager.cpp  server_manager.h  server_manager_win.cpp
imgui-browser/src/main/: main_args.h  main_args.mm  main_callbacks.mm  main_crash.h  main_crash.mm  main_crash_cross.cpp  main_dispatch.mm  main_entry_linux.cpp  main_entry_win.cpp  main_funcs.h  main_globals.h  main_globals.mm  main_layout.mm  main_menu.mm  main_priv.h  main_render.mm  main_servers.mm  main_wvcbs.mm
imgui-browser/src/platform/: platform.h  platform_linux.cpp  platform_mac.mm  platform_win.cpp
imgui-browser/src/top-of-gui/: chrome.cpp  chrome.css  chrome.h  chrome.html  chrome.js  chrome_drawer.cpp  chrome_drawer.h  chrome_shared.h  chrome_tab_row.cpp  chrome_tab_row.h  chrome_toolbar.cpp  chrome_toolbar.h  chrome_traffic_lights.cpp  chrome_traffic_lights.h  native_chrome.h  native_chrome.mm  native_chrome_stub.cpp  toolbar.html
imgui-browser/src/webview/: webview_cookies.mm  webview_core.mm  webview_delegates.mm  webview_js.h  webview_linux.cpp  webview_nav.mm  webview_popup.mm  webview_priv.h  webview_state.mm  webview_win.cpp
js/: agent.js  app.js  cdn-loader.js  color-harmony.js  color-swatch.js  editor-search.js  editor.js  fuzzy.js  gutter.js  indent-guide.js  modal-load.js  modal-save.js  native-bridge.js  property-lookup.js  size-slider.js  storage.js  theme-randomizer.js  utils.js  wireframe.js
livecss_flutter/: .gitignore  README.md  pubspec.yaml  run-all-auth-app-2fa.ps1  start-livecss-with-auth.ps1
mood_ck/: model-context.json
my_project/: Live CSS Editor.command  README.md  index.php  model-map.json  my_project  push-pull.php  setup.php  style-tool.config.json  style.css
page-builder/: .stage-token  DRAG_DROP_GRID_README.md  LAUNCHER_INTEGRATION.md  README.md  build.php  composer.php  create-page.php  db_api.php  flag-page.php  index.php  project-config.php  project.json  rename-page.php  save.php  section-api.php  section-library.php  stage.php  upload.php  watcher.php
pb_admin/: admin.css  api_proxy.php  dashboard.php  logout.php  router.php  setup.php  start-auth.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  php_server.rs
(+889 files in other folders)
