[package]
name    = "live-css-editor"
version = "1.0.0"
edition = "2021"
description = "Live CSS Editor — Tauri desktop app with embedded PHP server"

[lib]
name       = "live_css_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
